--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,10 @@
-lt
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Site</title>
+</head>
+<body>
+    <h1>Welcome</h1>
+    <p>Hello, world!</p>
+</body
